output-jdk/jdk17u-dev_row0331_dcd46501_4b40f900/test.log
=== Starting JDK 17 Tests in Docker for 6b15658 ===
--- Inside Docker: Running tests for 6b15658 ---
Target(s): test/jdk/java/net/httpclient/CancelRequestTest.java test/jdk/java/net/httpclient/CancelStreamedBodyTest.java test/jdk/java/net/httpclient/ReferenceTracker.java test/jdk/java/net/httpclient/SmallTimeout.java
--- Starting Test Execution in /repo/build_shared ---
--- Running target: test/jdk/java/net/httpclient/CancelRequestTest.java ---
Detected jtreg test file.
XML output  to /repo/JTwork
--------------------------------------------------
TEST: java/net/httpclient/CancelRequestTest.java
TEST RESULT: Passed. Execution successful
--------------------------------------------------
Test results: passed: 1
Report written to /repo/JTreport/html/report.html
Results written to /repo/JTwork
Target test/jdk/java/net/httpclient/CancelRequestTest.java PASSED
--- Running target: test/jdk/java/net/httpclient/CancelStreamedBodyTest.java ---
Detected jtreg test file.
XML output  to /repo/JTwork
--------------------------------------------------
TEST: java/net/httpclient/CancelStreamedBodyTest.java
TEST RESULT: Passed. Execution successful
--------------------------------------------------
Test results: passed: 1
Report written to /repo/JTreport/html/report.html
Results written to /repo/JTwork
Target test/jdk/java/net/httpclient/CancelStreamedBodyTest.java PASSED
--- Running target: test/jdk/java/net/httpclient/ReferenceTracker.java ---
Detected jtreg test file.
Error: Not a test or directory containing tests: java/net/httpclient/ReferenceTracker.java
Target test/jdk/java/net/httpclient/ReferenceTracker.java FAILED
--- Running target: test/jdk/java/net/httpclient/SmallTimeout.java ---
Detected jtreg test file.
XML output  to /repo/JTwork
--------------------------------------------------
TEST: java/net/httpclient/SmallTimeout.java
TEST JDK: /repo/build_shared/images/jdk

ACTION: build -- Failed. Compilation failed: Compilation failed
REASON: Named class compiled on demand
TIME:   0.95 seconds
messages:
command: build SmallTimeout
reason: Named class compiled on demand
started: Thu Apr 30 08:36:47 UTC 2026
Test directory:
  compile: SmallTimeout
finished: Thu Apr 30 08:36:48 UTC 2026
elapsed time (seconds): 0.95

ACTION: compile -- Failed. Compilation failed: Compilation failed
REASON: .class file out of date or does not exist
TIME:   0.945 seconds
messages:
command: compile /repo/test/jdk/java/net/httpclient/SmallTimeout.java
reason: .class file out of date or does not exist
started: Thu Apr 30 08:36:47 UTC 2026
Additional options from @modules: --add-modules java.net.http --add-exports java.net.http/jdk.internal.net.http.common=ALL-UNNAMED
Mode: othervm
finished: Thu Apr 30 08:36:48 UTC 2026
elapsed time (seconds): 0.945
configuration:
javac compilation environment
  add modules: java.net.http                              
  add exports: java.net.http/jdk.internal.net.http.common ALL-UNNAMED
  source path: /repo/test/jdk/java/net/httpclient         
  class path:  /repo/test/jdk/java/net/httpclient         
               /repo/JTwork/classes/java/net/httpclient/SmallTimeout.d 

rerun:
cd /repo/JTwork/scratch && \
HOME=/root \
JTREG_HOME=/opt/jtreg \
LANG=en_US.UTF-8 \
LC_ALL=en_US.UTF-8 \
PATH=/bin:/usr/bin:/usr/sbin \
    /repo/build_shared/images/jdk/bin/javac \
        -J-Dtest.vm.opts= \
        -J-Dtest.tool.vm.opts= \
        -J-Dtest.compiler.opts= \
        -J-Dtest.java.opts= \
        -J-Dtest.jdk=/repo/build_shared/images/jdk \
        -J-Dcompile.jdk=/repo/build_shared/images/jdk \
        -J-Dtest.timeout.factor=1.0 \
        -J-Dtest.root=/repo/test/jdk \
        -J-Dtest.name=java/net/httpclient/SmallTimeout.java \
        -J-Dtest.file=/repo/test/jdk/java/net/httpclient/SmallTimeout.java \
        -J-Dtest.src=/repo/test/jdk/java/net/httpclient \
        -J-Dtest.src.path=/repo/test/jdk/java/net/httpclient \
        -J-Dtest.classes=/repo/JTwork/classes/java/net/httpclient/SmallTimeout.d \
        -J-Dtest.class.path=/repo/JTwork/classes/java/net/httpclient/SmallTimeout.d \
        -J-Dtest.modules=java.net.http/jdk.internal.net.http.common \
        @/repo/JTwork/java/net/httpclient/SmallTimeout.d/compile.0.jta
STDOUT:
STDERR:
/repo/test/jdk/java/net/httpclient/SmallTimeout.java:184: error: cannot find symbol
            executor.close();
                    ^
  symbol:   method close()
  location: variable executor of type ExecutorService
1 error

TEST RESULT: Failed. Compilation failed: Compilation failed
--------------------------------------------------
Test results: failed: 1
Error: Some tests failed or other problems occurred.
Report written to /repo/JTreport/html/report.html
Results written to /repo/JTwork
Target test/jdk/java/net/httpclient/SmallTimeout.java FAILED
=== SOME TESTS FAILED ===
=== Tests failed for 6b15658 ===